add colors and iconNames to InputOutputDTO
